# CMake-Example

./: .gitignore  .goutputstream-13QTF0  CMakeLists.txt  config.yaml  patch-ogre-deps-linux.patch
cmake-modules/: GTK3Config.cmake
project1/: CMakeLists.txt  Debug  Release
